[package]
name = "wasm-smuggle"
version = "0.1.0"
authors = ["kali"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.45"
base64 = "0.21.7"
yew = "0.19"
wasm-bindgen-futures = "0.4"
gloo-timers = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


[dependencies.web-sys]
version = "0.3.69"
features = [
'Document',
'Element',
'HtmlElement',
'Node',
'Window',
'Location',
'TextDecoder',
'console',
'HtmlInputElement',
"HtmlAnchorElement"
]
